--- a/app/views/admin/survey/show.html.erb
+++ b/app/views/admin/survey/show.html.erb
@@ -49,7 +49,7 @@
                             </div><!-- Card Content -->
                             <div class="card-action">
                                 <%= submit_tag "Sukurti", class:'btn wave-light' %>
-                                <%= submit_tag "Sukurti ir išsiųsti", class:'btn wave-light' %>
+                                <%= submit_tag "Sukurti ir išsiųsti", class:'btn wave-light', onclick: "sendEmail(event)"%>
                             </div><!-- Card Actions -->
                         <% end %>
                     </div><!-- Card -->
